# clacks

./: .build.yml  .dockerignore  .env-example  .graphqlconfig.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yml  schema.graphql
migrations/2019-09-26-174024_basic_tables/: down.sql  up.sql
src/: auth.rs  config.rs  gql_context.rs  main.rs  models.rs  resolvers.rs  routes.rs  schema.rs  ws_actors.rs  ws_messages.rs
src/gqln/: base_types.rs  execution.rs  introspect.rs  introspection_defs.graphql  mod.rs  resolver_creation.rs
src/ws_actors/: messages.rs
tests/: bad_variables.json  fragments.graphql  introspection_query.graphql  many_variables.json  med_schema.graphql  simple_query.graphql  subscription_schema.graphql
