[package]
name = "clacks"
version = "0.1.0"
authors = ["Nick Dieff <nick.dieff@gmail.com>"]
edition = "2018"

[dependencies]
# Our web framework
actix = "0.8.3"
actix-web = "1.0.9"
# Adds support for WebSocket actors
actix-web-actors = "1.0.4"
# JWT validation
biscuit = "0.4.1"
# sql timestamps
chrono = "0.4.10"
# DB orm
diesel = { version = "1.4.3", features = ["mysql", "chrono", "r2d2"] }
# including .env files
dotenv = "0.15.0"
# Handles logging levels etc.
log = "0.4.8"
env_logger = "0.7.1"
# parses graphql queries and schema
graphql-parser = "0.2.3"
# serialize and deserialize data
serde = "1.0.103"
serde_json = "1.0.44"
